--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -94,10 +94,15 @@ a{
     }
 }
 p {
+    padding:        15px 0;
     color:          #aaa;
     font-family:    "Dosis", sans-serif;
     font-size:      16px;
     line-height:    23px;
     font-weight:    100;
     letter-spacing: 1px;
+
+    @include max_tablet {
+        padding: 10px 0;
+    }
 }
