--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -9,6 +9,13 @@
     @include max_laptop {
         padding: 15px 23px 0 15px;
     }
+    #avatar {
+    }
+
+    &:hover {
+        #avatar {
+        }
+    }
 }
 .navbar-inverse .navbar-brand {
     color: $cyan;
@@ -71,6 +78,10 @@
     background-color: rgba(black, 1);
     border: 0;
     @if $use_shadows { @include box-shadow(2px 2px 10px rgba(black, 0.5)); }
+}
+.navbar-collapse {
+    @include box-shadow(0);
+    border-top: 0;
 }
 
 #nav-row{
