--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -68,11 +68,15 @@ article {
 }
 .page-header {
     border: 0;
-    margin: 40px 0 0;
+    margin: 20px 0 0;
     padding-bottom: 0;
 }
 .post {
-    margin: 0 0 20px 0;
+    margin: 0 0 40px 0;
+}
+.entry-meta {
+    margin-bottom: 20px;
+    line-height: 150%;
 }
 
 .main-content{
@@ -88,5 +92,90 @@ article {
     @include max_tablet {
         margin-left: 0;
         margin-right: 0;
+    }
+}
+
+.image {
+     @if $use_shadows { @extend %boxShadow; }
+
+    img {
+        width: 100% !important;
+        height: auto !important;
+    }
+
+    @include max_laptop {
+        width: 100%;
+        img {
+            width: 100% !important;
+        }
+    }
+}
+
+.sidebar {
+    @if $use_shadows { @extend %boxShadow; }
+    padding: 20px;
+    margin-top: 20px;
+    background-color: black;
+}
+
+.row-thumbnails {
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.thumbnail {
+    @extend %transBg;
+    min-height:     285px;
+    padding:        0;
+    margin-bottom:  30px;
+
+    @include transition(all, 0s);
+
+    // Responsive
+
+    @include laptop {
+        min-height:     250px;
+    }
+    @include max_phone {
+        width: 100%;
+        clear: both;
+        min-height: 0;
+    }
+
+    h3 {
+        @include transition (background-color, 0.5s);
+        @include transition (padding,    0.5s);
+    }
+    img {
+        height: auto !important;
+
+        @include max_tablet {
+            width: 100% !important;
+        }
+    }
+
+    .thumb-content {
+        @extend %boxShadow;
+        background-color: black;
+    }
+    .caption {
+        text-align: center;
+        padding: 10px 0 0 0;
+    }
+
+    // Hover states
+
+    &:hover {
+        @include min_tablet {
+            img {
+                // border: 1px dotted $blue;
+                // @include transition(border, 0.5s);
+            }
+            h3 {
+                background: $blue;
+                padding-top: 20px;
+                @include transition (background-color, 0.2s);
+                @include transition (padding, 0.2s);
+            }
+        }
     }
 }
