--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -38,6 +38,10 @@ time, mark, audio, video {
     margin-right: 13px;
 }
 
+.visit-site {
+    margin: 40px 0;
+}
+
 .col-content {
     padding-left:  0px;
     padding-right: 50px;
@@ -54,7 +58,7 @@ time, mark, audio, video {
     padding: 15px 0 45px 0;
 }
 
-.main-content-inner {
+/* .main-content-inner {
     .wrap {
         // @include center-vertically(420px, 330px);
         height: 350px;
@@ -66,7 +70,7 @@ time, mark, audio, video {
             height: 350px !important;
         }
     }
-}
+} */
 
 
 
