vertically aligned single-design .main-content

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1057,6 +1057,32 @@ code, pre, .highlight {
 /*
  *  MIN / MAX
  */
+/* line 5, ../scss/_pages.scss */
+.single-design .main-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -175px;
+  margin-left: -585px;
+}
+@media only all and (max-width: 1199px) {
+  /* line 5, ../scss/_pages.scss */
+  .single-design .main-content {
+    margin-top: -150px;
+    margin-left: -485px;
+  }
+}
+@media only all and (max-width: 991px) {
+  /* line 5, ../scss/_pages.scss */
+  .single-design .main-content {
+    margin-top: auto;
+    margin-left: auto;
+    top: 0;
+    left: 0;
+    position: relative !important;
+  }
+}
+
 /* line 1, ../scss/_social.scss */
 #social-nav {
   position: relative;
