--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1059,6 +1059,7 @@ code, pre, .highlight {
  */
 /* line 5, ../scss/_pages.scss */
 .single-design .main-content {
+  padding: 0;
   position: fixed;
   top: 50%;
   left: 50%;
