--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -38,7 +38,7 @@ time, mark, audio, video {
     margin-right: 13px;
 }
 .soliloquy-container {
-    margin: 26px 0;
+    margin: 26px 0 !important;
 }
 .visit-site {
     margin: 40px 0;
