added top margin to soliloquy container

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1144,8 +1144,8 @@ code, pre, .highlight {
 }
 
 /* line 40, ../scss/custom.scss */
-.soliloquy-container {
-  margin: 26px 0 !important;
+.design-slider {
+  margin: 26px 0;
 }
 
 /* line 43, ../scss/custom.scss */
