--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -37,8 +37,8 @@ time, mark, audio, video {
     margin-top: 1px;
     margin-right: 13px;
 }
-.soliloquy-container {
-    margin: 26px 0 !important;
+.design-slider {
+    margin: 26px 0;
 }
 .visit-site {
     margin: 40px 0;
