--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -157,7 +157,7 @@ code, pre, .highlight {
 }
 
 /* line 72, ../scss/_mixins.scss */
-.thumbnail .thumb-content, .mq-list li {
+.image, .sidebar, .thumbnail .thumb-content, .design-slider, .mq-list li {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -444,7 +444,7 @@ code, pre, .highlight {
 }
 
 /* line 72, ../scss/_mixins.scss */
-.thumbnail .thumb-content, .mq-list li {
+.image, .sidebar, .thumbnail .thumb-content, .design-slider, .mq-list li {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -665,6 +665,9 @@ p {
 .navbar-inverse {
   background-color: black;
   border: 0;
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* line 82, ../scss/_navbar.scss */
@@ -804,7 +807,7 @@ code, pre, .highlight {
 }
 
 /* line 72, ../scss/_mixins.scss */
-.thumbnail .thumb-content, .mq-list li {
+.image, .sidebar, .thumbnail .thumb-content, .design-slider, .mq-list li {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -1039,7 +1042,7 @@ code, pre, .highlight {
 }
 
 /* line 72, ../scss/_mixins.scss */
-.thumbnail .thumb-content, .mq-list li {
+.image, .sidebar, .thumbnail .thumb-content, .design-slider, .mq-list li {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -1148,30 +1151,30 @@ code, pre, .highlight {
   margin: 26px 0;
 }
 
-/* line 43, ../scss/custom.scss */
+/* line 44, ../scss/custom.scss */
 .visit-site {
   margin: 40px 0;
 }
 
-/* line 47, ../scss/custom.scss */
+/* line 48, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
 }
 @media only all and (max-width: 991px) {
-  /* line 47, ../scss/custom.scss */
+  /* line 48, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 47, ../scss/custom.scss */
+  /* line 48, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
 }
 
-/* line 59, ../scss/custom.scss */
+/* line 60, ../scss/custom.scss */
 .portfolio-desc {
   padding: 15px 0 45px 0;
 }
@@ -1192,17 +1195,17 @@ code, pre, .highlight {
 /* 
  *  Contact Form 
  */
-/* line 84, ../scss/custom.scss */
+/* line 85, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 87, ../scss/custom.scss */
+/* line 88, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 93, ../scss/custom.scss */
+/* line 94, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #0074a2;
   background-color: #0074a2;
@@ -1212,7 +1215,7 @@ code, pre, .highlight {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 98, ../scss/custom.scss */
+/* line 99, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1224,52 +1227,52 @@ code, pre, .highlight {
 /* 
  *  Media Queries thumbs
  */
-/* line 109, ../scss/custom.scss */
+/* line 110, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 111, ../scss/custom.scss */
+/* line 112, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 111, ../scss/custom.scss */
+  /* line 112, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 111, ../scss/custom.scss */
+  /* line 112, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 111, ../scss/custom.scss */
+  /* line 112, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 126, ../scss/custom.scss */
+/* line 127, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 126, ../scss/custom.scss */
+  /* line 127, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
-/* line 132, ../scss/custom.scss */
+/* line 133, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.4%;
 }
-/* line 135, ../scss/custom.scss */
+/* line 136, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 138, ../scss/custom.scss */
+/* line 139, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
@@ -1278,7 +1281,7 @@ code, pre, .highlight {
 /*
  *  Admin Menu 
  */
-/* line 149, ../scss/custom.scss */
+/* line 150, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
@@ -1286,11 +1289,11 @@ code, pre, .highlight {
 /* 
  *  Footer
  */
-/* line 157, ../scss/custom.scss */
+/* line 158, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 159, ../scss/custom.scss */
+/* line 160, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
