--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -263,49 +263,55 @@ article {
   }
 }
 
-/* line 89, ../scss/_overrides.scss */
+/* line 90, ../scss/_overrides.scss */
+.main-content-inner ul {
+  list-style: circle;
+  margin-left: 27px;
+}
+
+/* line 98, ../scss/_overrides.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 89, ../scss/_overrides.scss */
+  /* line 98, ../scss/_overrides.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 101, ../scss/_overrides.scss */
+/* line 110, ../scss/_overrides.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 98, ../scss/_overrides.scss */
+  /* line 107, ../scss/_overrides.scss */
   .image {
     width: 100%;
   }
-  /* line 108, ../scss/_overrides.scss */
+  /* line 117, ../scss/_overrides.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 114, ../scss/_overrides.scss */
+/* line 123, ../scss/_overrides.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
 
-/* line 121, ../scss/_overrides.scss */
+/* line 130, ../scss/_overrides.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 125, ../scss/_overrides.scss */
+/* line 134, ../scss/_overrides.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -316,20 +322,20 @@ article {
   transition: all, 0s;
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 125, ../scss/_overrides.scss */
+  /* line 134, ../scss/_overrides.scss */
   .thumbnail {
     min-height: 250px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 125, ../scss/_overrides.scss */
+  /* line 134, ../scss/_overrides.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 144, ../scss/_overrides.scss */
+/* line 153, ../scss/_overrides.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -340,27 +346,27 @@ article {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 148, ../scss/_overrides.scss */
+/* line 157, ../scss/_overrides.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 148, ../scss/_overrides.scss */
+  /* line 157, ../scss/_overrides.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 156, ../scss/_overrides.scss */
+/* line 165, ../scss/_overrides.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 160, ../scss/_overrides.scss */
+/* line 169, ../scss/_overrides.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 173, ../scss/_overrides.scss */
+  /* line 182, ../scss/_overrides.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
