--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -86,6 +86,15 @@ article {
         padding: 40px 0 30px 0;
     }
 }
+.main-content-inner {
+    ul {
+        list-style: circle;
+        margin-left: 27px;
+    }
+}
+
+
+
 .content{
     margin-left: 15px;
     margin-right: 15px;
