--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -87,10 +87,10 @@ article {
     }
 }
 .main-content-inner {
-    ul {
+    /* ul {
         list-style: circle;
         margin-left: 27px;
-    }
+    } */
 }
 
 
