--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -498,27 +498,27 @@ h1 {
   margin-bottom: 30px;
   margin-left: -4px;
 }
-@media screen and (max-width: 1200px) {
+@media only all and (max-width: 1199px) {
   /* line 44, ../scss/_typography.scss */
   h1 {
     font-size: 49px;
   }
 }
-/* line 55, ../scss/_typography.scss */
+/* line 52, ../scss/_typography.scss */
 h1 a {
   color: #2ea2cc;
 }
-/* line 57, ../scss/_typography.scss */
+/* line 54, ../scss/_typography.scss */
 h1 a:hover {
   color: white;
 }
 
-/* line 62, ../scss/_typography.scss */
+/* line 59, ../scss/_typography.scss */
 h2 {
   font-size: 230%;
 }
 
-/* line 67, ../scss/_typography.scss */
+/* line 64, ../scss/_typography.scss */
 h3 {
   margin: 0px 0 15px 0;
   padding: 5px 7px 5px;
@@ -536,20 +536,20 @@ h3 {
     } */
 }
 
-/* line 86, ../scss/_typography.scss */
+/* line 83, ../scss/_typography.scss */
 h3 {
   font-size: 130%;
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.6);
 }
 
-/* line 90, ../scss/_typography.scss */
+/* line 87, ../scss/_typography.scss */
 a {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
   -o-transition: color, 0.25s;
   transition: color, 0.25s;
 }
-/* line 92, ../scss/_typography.scss */
+/* line 89, ../scss/_typography.scss */
 a:hover {
   -webkit-transition: color, 0.25s;
   -moz-transition: color, 0.25s;
@@ -557,7 +557,7 @@ a:hover {
   transition: color, 0.25s;
 }
 
-/* line 96, ../scss/_typography.scss */
+/* line 93, ../scss/_typography.scss */
 p {
   padding: 15px 0;
   color: #aaa;
@@ -568,7 +568,7 @@ p {
   letter-spacing: 1px;
 }
 @media only all and (max-width: 767px) {
-  /* line 96, ../scss/_typography.scss */
+  /* line 93, ../scss/_typography.scss */
   p {
     padding: 10px 0;
   }
