--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -46,11 +46,8 @@ h1 {
     font-size:      60px;
     margin-bottom:  30px;
     margin-left:    -4px;
-    @media screen and (max-width: 1200px) {
+    @include max_desktop {
         font-size: 49px;
-    }
-    span {
-        // color: $red;
     }
     a{
         color: $cyan;
