cleaned up single templates a bit. tried a full width design slider... think i'm going to ditch it though.

--- a/assets/scss/_pages.scss
+++ b/assets/scss/_pages.scss
@@ -4,6 +4,6 @@
 .single-design {
 	.main-content {
 		padding: 0 !important;
-		@include center-vertically(325px, 300px);
+		// @include center-vertically(325px, 300px);
 	}
 }
