--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1071,28 +1071,6 @@ code, pre, .highlight {
 /* line 5, ../scss/_pages.scss */
 .single-design .main-content {
   padding: 0 !important;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -162.5px;
-  margin-left: -585px;
-}
-@media only all and (max-width: 1199px) {
-  /* line 5, ../scss/_pages.scss */
-  .single-design .main-content {
-    margin-top: -150px;
-    margin-left: -485px;
-  }
-}
-@media only all and (max-width: 991px) {
-  /* line 5, ../scss/_pages.scss */
-  .single-design .main-content {
-    margin-top: auto;
-    margin-left: auto;
-    top: 0;
-    left: 0;
-    position: relative !important;
-  }
 }
 
 /* line 1, ../scss/_social.scss */
@@ -1188,10 +1166,15 @@ code, pre, .highlight {
 }
 
 /* line 65, ../scss/custom.scss */
+.soliloquy-container img {
+  width: 100%;
+  height: auto;
+}
+/* line 69, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 68, ../scss/custom.scss */
+/* line 72, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1200,7 +1183,7 @@ code, pre, .highlight {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 73, ../scss/custom.scss */
+/* line 77, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1226,17 +1209,17 @@ code, pre, .highlight {
 /* 
  *  Contact Form 
  */
-/* line 102, ../scss/custom.scss */
+/* line 106, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 105, ../scss/custom.scss */
+/* line 109, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #2ea2cc;
 }
 
-/* line 111, ../scss/custom.scss */
+/* line 115, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #2ea2cc;
   background-color: #2ea2cc;
@@ -1246,7 +1229,7 @@ code, pre, .highlight {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 116, ../scss/custom.scss */
+/* line 120, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #2ea2cc;
   -webkit-transition: background-color, 0.25s;
@@ -1258,52 +1241,52 @@ code, pre, .highlight {
 /* 
  *  Media Queries thumbs
  */
-/* line 127, ../scss/custom.scss */
+/* line 131, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 129, ../scss/custom.scss */
+/* line 133, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 129, ../scss/custom.scss */
+  /* line 133, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 129, ../scss/custom.scss */
+  /* line 133, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 129, ../scss/custom.scss */
+  /* line 133, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 144, ../scss/custom.scss */
+/* line 148, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 144, ../scss/custom.scss */
+  /* line 148, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
-/* line 150, ../scss/custom.scss */
+/* line 154, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.4%;
 }
-/* line 153, ../scss/custom.scss */
+/* line 157, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 156, ../scss/custom.scss */
+/* line 160, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
@@ -1312,7 +1295,7 @@ code, pre, .highlight {
 /*
  *  Admin Menu 
  */
-/* line 167, ../scss/custom.scss */
+/* line 171, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
@@ -1320,11 +1303,11 @@ code, pre, .highlight {
 /* 
  *  Footer
  */
-/* line 175, ../scss/custom.scss */
+/* line 179, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 177, ../scss/custom.scss */
+/* line 181, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
