--- a/assets/scss/_pages.scss
+++ b/assets/scss/_pages.scss
@@ -3,7 +3,7 @@
 
 .single-design {
 	.main-content {
-		padding: 0 !important;
+		// padding: 0 !important;
 		// @include center-vertically(325px, 300px);
 	}
 }
